--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
       <h3><sp2>Propoint</sp2><br>Developers</h3>
             <p>
               
-              <strong>Phone:</strong><br> +91 8086164182<br>
-              <strong>Email:</strong> propoint365@gmail.com<br>
+              <a href="tel: 8086164182 "><strong>Phone:</strong><br> +91 8086164182<br></a>
+              <a href="mailto: propoint365@gmail.com"><strong>Email:</strong> propoint365@gmail.com<br></a>
             </p>
       
     </div>
