--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
   <nav id="sidebar-wrapper">
     <ul class="sidebar-nav">
       <li class="sidebar-brand">
-        <a class="js-scroll-trigger" href="#page-top">Our Features</a>
+        <a class="js-scroll-trigger" href="#contact">Our Features</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#page-top">Website</a>
+        <a class="js-scroll-trigger" href="#contact">Website</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#about">App development</a>
+        <a class="js-scroll-trigger" href="#contact">App development</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#services">Marketing Designs</a>
+        <a class="js-scroll-trigger" href="#contact">Marketing Designs</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#portfolio">Logo creation</a>
+        <a class="js-scroll-trigger" href="#contact">Logo creation</a>
       </li>
       <li class="sidebar-nav-item">
         <a class="js-scroll-trigger" href="#contact">SEO</a>
@@ -140,7 +140,7 @@
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6">
-          <a class="portfolio-item" href="#!">
+          <a class="portfolio-item" href="#contact">
             <div class="caption">
               <div class="caption-content">
                 <div class="h2">App development</div>
@@ -151,7 +151,7 @@
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="#!">
+          <a class="portfolio-item" href="#contact">
             <div class="caption">
               <div class="caption-content">
                 <div class="h2">Marketing Designs</div>
@@ -162,7 +162,7 @@
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="#!">
+          <a class="portfolio-item" href="#contact">
             <div class="caption">
               <div class="caption-content">
                 <div class="h2">Web development</div>
@@ -173,7 +173,7 @@
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="#!">
+          <a class="portfolio-item" href="#contact">
             <div class="caption">
               <div class="caption-content">
                 <div class="h2">Logos</div>
@@ -188,7 +188,7 @@
   </section>
 
   <!-- Call to Action -->
-  <section class="content-section bg-primary text-white">
+  <section id="contact" class="content-section bg-primary text-white">
     <div class="container text-center">
 
       <h3><sp2>Propoint</sp2><br>Developers</h3>
@@ -224,7 +224,7 @@
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="js/stylish-portfolio.min.js"></script>
+  <script src="js/stylish-portfolio.js"></script>
 
 </body>
 
