--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
               
               <a href="tel: 8086164182 "><strong>Phone:</strong><br> +91 8086164182<br></a>
               <a href="mailto: propoint365@gmail.com"><strong>Email:</strong> propoint365@gmail.com<br></a>
+              <marquee >OFFICIAL WEB SOON... Launching of propoint official website shortly!!!</marquee>
             </p>
       
     </div>
